clusters/lab/apps/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  tls:
    - hosts:
        - whoami
